--- a/contact.html
+++ b/contact.html
@@ -1,143 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>Contact Us | Top Review</title>
-    <meta name="description" content="Get in touch with Top Review. We're here to help with any questions or feedback you may have." />
-    <meta name="keywords" content="contact us, feedback, customer support, Top Review" />
-    <meta name="author" content="Mr. Rocky" />
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700" rel="stylesheet">
-
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-    <!-- Main CSS -->
-    <link href="./assets/css/main.css" rel="stylesheet"/>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3355297884222438"
-     crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>TopReview | Product Reviews</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- NAVBAR -->
 
-   <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="./index.html"><strong>TopReview</strong></a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbarColor02">
-                <ul class="navbar-nav mr-auto d-flex align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./privacyPolicy.html">Privacy Policy</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto d-flex align-items-center">
-                    <li class="nav-item highlight">
-                        <a class="nav-link" href="./Blog.html">Read Blogs</a>
-                    </li>
-                </ul>
+    <!-- Navbar -->
+    <nav>
+        <div class="container nav-container">
+            <div class="logo">
+                <a href="index.html">TopReview</a>
             </div>
+            <div class="menu">
+                <a href="./index.html">Home</a>
+                <a href="./gallery.html">Blogs Gallery</a>
+                <a href="./contact.html">Contact Us</a>
+                <a href="./about.html">About Us</a>
+                <a href="./privacy.html">Privacy Policy</a>
+            </div>
+            <button class="toggle-theme" onclick="toggleTheme()">Dark Mode</button>
         </div>
     </nav>
-<!-- END NAVBAR -->
 
-<!-- HEADER -->
-<div class="container">
-    <div class="jumbotron jumbotron-fluid mb-3 pt-0 pb-0 bg-lightblue position-relative">
-        <div class="pl-4 pr-0 h-100 tofront">
-            <div class="row justify-content-between">
-                <div class="col-md-6 pt-6 pb-6 align-self-center">
-                    <h1 class="secondfont mb-3 font-weight-bold">Contact Us</h1>
-                    <p class="mb-3">
-                        We’d love to hear from you! Whether you have a question, feedback, or just want to get in touch, feel free to reach out to us.
-                    </p>
+    <!-- Contact Us Section -->
+    <section class="contact-us">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <div class="contact-info">
+                <div class="contact-column">
+                    <h2>Get in Touch</h2>
+                    <p>We would love to hear from you! Whether you have a question, suggestion, or just want to share your thoughts, feel free to reach out to us using the form below or through our contact details.</p>
+                    <ul>
+                        <li><strong>Email:</strong> <a href="mailto:contact@royalblog.com">contact@royalblog.com</a></li>
+                        <li><strong>Phone:</strong> +1 123 456 7890</li>
+                        <li><strong>Address:</strong> 123 Royal Street, Kingdom City</li>
+                    </ul>
                 </div>
-                <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/contact.jpg);" alt="Contact us image">
+                <div class="contact-column">
+                    <h2>Contact Form</h2>
+                    <form action="submit_form.php" method="post">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+
+                        <button type="submit">Send Message</button>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<!-- END HEADER -->
+    </section>
 
-<!-- MAIN CONTENT -->
-<div class="container pt-4 pb-4">
-    <div class="row">
-        <div class="col-md-8">
-            <h2 class="h4 font-weight-bold">Get in Touch</h2>
-            <form action="#" method="post">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea class="form-control" id="message" rows="4" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-dark">Send Message</button>
-            </form>
-        </div>
-        <div class="col-md-4">
-            <h2 class="h4 font-weight-bold">Contact Details</h2>
-            <p>
-                <strong>Address:</strong><br>
-                786 lane G13<br>
-                Islamabad.
-            </p>
-            <p>
-                <strong>Email:</strong><br>
-                <a href="mailto:topreviewhelp@gmail.com">topreviewhelp@gmail.com</a>
-            </p>
-            <p>
-                <strong>Phone:</strong><br>
-                +923287618199
-            </p>
-        </div>
-    </div>
-</div>
-
-<!-- FOOTER -->
-<div class="container mt-5">
-    <footer class="bg-white border-top p-3 text-muted small">
-        <div class="row align-items-center justify-content-between">
-            <div>
-                <span class="navbar-brand mr-2"><strong>Top Review</strong></span> Copyright &copy;
-                <script>document.write(new Date().getFullYear())</script>
-                . All rights reserved.
+ <!-- Footer Section -->
+    <footer>
+        <div class="container footer-container">
+            <div class="footer-column">
+                <h3>About TopReview</h3>
+                <p>Royal Blog is your go-to destination for luxurious insights into fashion, design, and more. Stay inspired and elevate your lifestyle to a royal level.</p>
             </div>
-            <div>
-                Based on <strong>Organic Research</strong> by Mr. Rocky.
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./gallery.html">Blogs Gallery</a></li>
+                    <li><a href="./contact.html">Contact Us</a></li>
+                    <li><a href="./about.html"></a>About Us</li>
+                    <li><a href="./privacy.html">Privacy Policy</a></li>
+                </ul>
             </div>
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li>Email: topreviewshelp@gmail.com</li>
+                    <li>Phone: +923287618199</li>
+                    <li>Address: 123 Royal Street, Kingdom City</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 TopReview. All Rights Reserved.</p>
         </div>
     </footer>
-</div>
-<!-- END FOOTER -->
 
-<!-- JAVASCRIPTS -->
-<script src="./assets/js/vendor/jquery.min.js" type="text/javascript"></script>
-<script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
-<script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
-<script src="./assets/js/functions.js" type="text/javascript"></script>
+    <script src="script.js"></script>
 </body>
 </html>
