Update Apple iPhone 15 Pro Max Phone Specifications And Prices.html

--- a/blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html
+++ b/blogs/Apple iPhone 15 Pro Max Phone Specifications And Prices.html
@@ -1,84 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Apple iPhone 15 Pro Max Phone Specifications And Prices</title>
-    <meta name="description" content="The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip, a stunning 6.7-inch OLED display, and a top-tier camera system with a 108MP main sensor." />
-    <meta name="keywords" content="iphone 15, iphone 15 pro max, iphone 14, iphone 13, iphone 12" />
-    <meta name="author" content="Mr. Rocky" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700" rel="stylesheet">
-
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-    <!-- Main CSS -->
-    <link href="../assets/css/main.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Best Gaming Laptop 2024 A complete Guide.</title>
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <!-- NAVBAR -->
-   <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="../index.html"><strong>TopReview</strong></a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbarColor02">
-                <ul class="navbar-nav mr-auto d-flex align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../about.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../contact.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../privacyPolicy.html">Privacy Policy</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto d-flex align-items-center">
-                    <li class="nav-item highlight">
-                        <a class="nav-link" href="../Blog.html">Read Blogs</a>
-                    </li>
-                </ul>
+
+     <!-- Navbar -->
+    <nav>
+        <div class="container nav-container">
+            <div class="logo">
+                <a href="../index.html">TopReview</a>
             </div>
+            <div class="menu">
+                <a href="../index.html">Home</a>
+                <a href="../gallery.html">Blogs Gallery</a>
+                <a href="../contact.html">Contact Us</a>
+                <a href="../about.html">About Us</a>
+                <a href="../privacy.html">Privacy Policy</a>
+            </div>
+            <button class="toggle-theme" onclick="toggleTheme()">Dark Mode</button>
         </div>
     </nav>
-    <!-- END NAVBAR -->
 
-    <!-- HEADER -->
-    <div class="container">
-        <div class="jumbotron jumbotron-fluid mb-3 pt-0 pb-0 bg-lightblue position-relative">
-            <div class="pl-4 pr-0 h-100 tofront">
-                <div class="row justify-content-between">
-                    <div class="col-md-6 pt-6 pb-6 align-self-center">
-                        <h1 class="secondfont mb-3 font-weight-bold">Apple iPhone 15 Pro Max Phone Specifications And Prices</h1>
-                        <p class="mb-3">
-                            The Apple iPhone 15 Pro Max sets a new standard in smartphone technology.
-                        </p>
-                    </div>
-                   <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url('/assets/img/iphone 15 pro max.jpg'); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- END HEADER -->
 
-    <!-- MAIN CONTENT -->
-    <div class="container pt-4 pb-4">
-        <div class="row">
-            <div class="col-lg-12">
-                <article>
+
+    <!-- Blog Post Section -->
+    <section class="blog-post">
+        <div class="container">
+ <article>
                     <h1 class="h2 font-weight-bold">Apple iPhone 15 Pro Max Phone Specifications And Prices</h1>
                     <p>Introducing the revolutionary Apple iPhone 15 Pro Max, a game-changer in smartphone technology. Packed with cutting-edge specifications, this flagship device sets a new benchmark for innovation and performance.
 The iPhone 15 Pro Max boasts a stunning 6.7-inch OLED display, delivering breathtaking visuals with vibrant colors and crisp details. Powered by the latest A14 Bionic chip, this powerhouse offers lightning-fast speed and seamless multitasking for a smooth user experience.
@@ -105,7 +60,7 @@ Experience true luxury and unparalleled performance with the Apple iPhone 15 Pro
                         <p>At the heart of the Apple iPhone 15 Pro Max lies the powerful A14 Bionic chip, the latest and greatest processor from Apple. This cutting-edge chipset delivers unparalleled performance, offering lightning-fast processing speeds and seamless multitasking capabilities.</p>
                         <p>The A14 Bionic chip is built on a 5nm process, allowing for a significant increase in transistor density and power efficiency. This translates to improved overall performance, with the chip delivering up to 40% faster CPU performance and 30% faster graphics processing compared to the previous generation.</p>
                         <p>In terms of storage options, the iPhone 15 Pro Max offers a range of choices to suit the needs of various users. The base model comes with 128GB of internal storage, while higher-end configurations offer 256GB, 512GB, and even 1TB of storage space. This ample storage capacity ensures that users can store their vast collection of photos, videos, apps, and files without worrying about running out of space.</p>
-                        <div class="col-md-6 d-none d-md-block pr-0" style="background-image:url('/assets/img/iphone 15 pro max unboxing.jpg'); background-size:cover; background-position:center; background-repeat:no-repeat; min-height: 250px;">
+                        <img src="Images/iphone 15 pro max unboxing.jpg" alt="Blog Image">
                     </section>
 
                     <section>
@@ -155,35 +110,39 @@ Compared to the previous generation iPhone 14 Pro Max, the iPhone 15 Pro Max boa
                     </section>
                     
                 </article>
+
+   <!-- Footer Section -->
+      <footer>
+        <div class="container footer-container">
+            <div class="footer-column">
+                <h3>About TopReview</h3>
+                <p>Royal Blog is your go-to destination for luxurious insights into fashion, design, and more. Stay inspired and elevate your lifestyle to a royal level.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../gallery.html">Blogs Gallery</a></li>
+                    <li><a href="../contact.html">Contact Us</a></li>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../privacy.html">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li>Email: topreviewshelp@gmail.com</li>
+                    <li>Phone: +923287618199</li>
+                    <li>Address: 123 Royal Street, Kingdom City</li>
+                </ul>
             </div>
         </div>
-    </div>
-    <!-- END MAIN CONTENT -->
+        <div class="footer-bottom">
+            <p>&copy; 2024 TopReview. All Rights Reserved.</p>
+        </div>
+    </footer>
 
-    <!-- FOOTER -->
-    <div class="container mt-5">
-        <footer class="bg-white border-top p-3 text-muted small">
-            <div class="row align-items-center justify-content-between">
-                <div>
-                    <span class="navbar-brand mr-2"><strong>Top Review</strong></span> Copyright &copy;
-                    <script>
-                        document.write(new Date().getFullYear())
-                    </script>
-                    . All rights reserved.
-                </div>
-                <div>
-                    Based on <strong>Organic Research</strong> by Mr. Rocky.
-                </div>
-            </div>
-        </footer>
-    </div>
-    <!-- END FOOTER -->
 
-    <!-- JAVASCRIPTS -->
-    <script src="../assets/js/vendor/jquery.min.js" type="text/javascript" defer></script>
-    <script src="../assets/js/vendor/popper.min.js" type="text/javascript" defer></script>
-    <script src="../assets/js/vendor/bootstrap.min.js" type="text/javascript" defer></script>
-    <script src="../assets/js/functions.js" type="text/javascript" defer></script>
+    <script src="../script.js"></script>
 </body>
-
 </html>
