--- a/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
+++ b/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
@@ -110,7 +110,54 @@ Compared to the previous generation iPhone 14 Pro Max, the iPhone 15 Pro Max boa
                     </section>
                     
                 </article>
+<form id="commentForm">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required>
+  
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+  
+  <label for="comment">Comment:</label>
+  <textarea id="comment" name="comment" required></textarea>
+  
+  <button type="submit">Submit</button>
+  
+  <div id="status"></div>
+</form>
 
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script type="text/javascript">
+  (function() {
+    emailjs.init("xp9sdYd4lX0iYm4tH"); // Replace with your public key
+  })();
+
+  document.getElementById('commentForm').addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent the default form submission
+
+    const name = document.getElementById('name').value;
+    const email = document.getElementById('email').value;
+    const comment = document.getElementById('comment').value;
+
+    // Create the template parameters that match your EmailJS template
+    const templateParams = {
+      to_name: 'Topreview', // You can change this to a dynamic recipient if needed
+      from_name: name,
+      reply_to: email,
+      message: comment
+    };
+
+    // Send the email via EmailJS
+    emailjs.send("service_l4gj1ib", "template_u4jqtxp", templateParams)
+      .then(function(response) {
+        console.log('SUCCESS!', response.status, response.text);
+        document.getElementById('status').innerHTML = "Comment sent successfully!";
+      }, function(error) {
+        console.log('FAILED...', error);
+        document.getElementById('status').innerHTML = "Failed to send comment. Please try again later.";
+      });
+  });
+</script>
+            
    <!-- Footer Section -->
       <footer>
         <div class="container footer-container">
