Update Best Gaming Laptop 2024 A complete Guide.html

--- a/blogs/Best Gaming Laptop 2024 A complete Guide.html
+++ b/blogs/Best Gaming Laptop 2024 A complete Guide.html
@@ -28,6 +28,8 @@
         </div>
     </nav>
 
+<!-- Back to Top Button -->
+<button id="backToTop" title="Go to top">⬆️</button>
 
 
     <!-- Blog Post Section -->
