--- a/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
+++ b/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
@@ -28,6 +28,8 @@
         </div>
     </nav>
 
+<!-- Back to Top Button -->
+<button id="backToTop" title="Go to top">⬆️</button>
 
 
     <!-- Blog Post Section -->
