--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                     <div class="blog-card">
                     <img src="Images/gadgets.jpg" alt="Blog Image">
-                    <h3>Royal Interior Designs for Elegance</h3>
+                    <h3><a href="./blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html"></a>NBA 2K25 Ps5 Game TopReview Ratings & Answers</h3>
                 </div>
             </div>
         </div>
