Update NBA 2K25 Ps5 Game TopReview Ratings & Answers.html

--- a/blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html
+++ b/blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html
@@ -4,6 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>NBA 2K25 Ps5 Game TopReview Ratings &amp; Answers</title>
 	<meta name="description" content="Discover NBA 2K25 for PS5: ratings, release date, cover athlete, and more. Get the latest info on gameplay features, pricing, and cross-platform options for the ultimate basketball sim." />
+	  <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
