--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                 </div>
                     <div class="blog-card">
-                    <img src="Images/gadgets.jpg" alt="Blog Image">
-                    <h3><a href="./blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html"></a>NBA 2K25 Ps5 Game TopReview Ratings & Answers</h3>
+                    <img src="Images/NBA 2k25 image.jpg" alt="Blog Image">
+                    <h3><a href="./blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html">NBA 2K25 Ps5 Game TopReview Ratings & Answers</a></h3>
                 </div>
             </div>
         </div>
